var searchData=
[
  ['ecc_5fshamir_0',['ECC_SHAMIR',['../user__settings_8h.html#aba3f3207788ed45608898377117a93fa',1,'user_settings.h']]],
  ['election_5fkey_5fpair_5fproto_5f_5fdescriptor_1',['election_key_pair_proto__descriptor',['../buff_8pb-c_8c.html#a23e16682296d4fba6d74980a8755dea8',1,'election_key_pair_proto__descriptor:&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a23e16682296d4fba6d74980a8755dea8',1,'election_key_pair_proto__descriptor:&#160;buff.pb-c.c']]],
  ['election_5fkey_5fpair_5fproto_5f_5ffree_5funpacked_2',['election_key_pair_proto__free_unpacked',['../buff_8pb-c_8c.html#a94aacf4ede7e72c636d8caef080777e5',1,'election_key_pair_proto__free_unpacked(ElectionKeyPairProto *message, ProtobufCAllocator *allocator):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a94aacf4ede7e72c636d8caef080777e5',1,'election_key_pair_proto__free_unpacked(ElectionKeyPairProto *message, ProtobufCAllocator *allocator):&#160;buff.pb-c.c']]],
  ['election_5fkey_5fpair_5fproto_5f_5fget_5fpacked_5fsize_3',['election_key_pair_proto__get_packed_size',['../buff_8pb-c_8c.html#a3a83c69b34bc9ba8f6bb56f4af4f077f',1,'election_key_pair_proto__get_packed_size(const ElectionKeyPairProto *message):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a3a83c69b34bc9ba8f6bb56f4af4f077f',1,'election_key_pair_proto__get_packed_size(const ElectionKeyPairProto *message):&#160;buff.pb-c.c']]],
  ['election_5fkey_5fpair_5fproto_5f_5finit_4',['election_key_pair_proto__init',['../buff_8pb-c_8c.html#aa8242986e65a94460a790826d8ba4aec',1,'election_key_pair_proto__init(ElectionKeyPairProto *message):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#aa8242986e65a94460a790826d8ba4aec',1,'election_key_pair_proto__init(ElectionKeyPairProto *message):&#160;buff.pb-c.c']]],
  ['election_5fkey_5fpair_5fproto_5f_5finit_5',['ELECTION_KEY_PAIR_PROTO__INIT',['../buff_8pb-c_8h.html#a9ea3d72d5a1956b4c7f4afb163a17b5a',1,'buff.pb-c.h']]],
  ['election_5fkey_5fpair_5fproto_5f_5fpack_6',['election_key_pair_proto__pack',['../buff_8pb-c_8c.html#ac69ed46c2e26ea62d7a8632652fd216c',1,'election_key_pair_proto__pack(const ElectionKeyPairProto *message, uint8_t *out):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#ac69ed46c2e26ea62d7a8632652fd216c',1,'election_key_pair_proto__pack(const ElectionKeyPairProto *message, uint8_t *out):&#160;buff.pb-c.c']]],
  ['election_5fkey_5fpair_5fproto_5f_5fpack_5fto_5fbuffer_7',['election_key_pair_proto__pack_to_buffer',['../buff_8pb-c_8c.html#a84fb8531693678c07ed8b960994b74b7',1,'election_key_pair_proto__pack_to_buffer(const ElectionKeyPairProto *message, ProtobufCBuffer *buffer):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a84fb8531693678c07ed8b960994b74b7',1,'election_key_pair_proto__pack_to_buffer(const ElectionKeyPairProto *message, ProtobufCBuffer *buffer):&#160;buff.pb-c.c']]],
  ['election_5fkey_5fpair_5fproto_5f_5funpack_8',['election_key_pair_proto__unpack',['../buff_8pb-c_8c.html#a70dd5a5f55a30514863cdbe879e80a79',1,'election_key_pair_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a70dd5a5f55a30514863cdbe879e80a79',1,'election_key_pair_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;buff.pb-c.c']]],
  ['election_5fpartial_5fkey_5fpair_5fbackup_5fproto_5f_5fdescriptor_9',['election_partial_key_pair_backup_proto__descriptor',['../buff_8pb-c_8c.html#a2f769a025f710cf47be176ce30c803cc',1,'election_partial_key_pair_backup_proto__descriptor:&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a2f769a025f710cf47be176ce30c803cc',1,'election_partial_key_pair_backup_proto__descriptor:&#160;buff.pb-c.c']]],
  ['election_5fpartial_5fkey_5fpair_5fbackup_5fproto_5f_5ffree_5funpacked_10',['election_partial_key_pair_backup_proto__free_unpacked',['../buff_8pb-c_8c.html#aff01ea2b4a4a1c148efef91e8b771dc6',1,'election_partial_key_pair_backup_proto__free_unpacked(ElectionPartialKeyPairBackupProto *message, ProtobufCAllocator *allocator):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#aff01ea2b4a4a1c148efef91e8b771dc6',1,'election_partial_key_pair_backup_proto__free_unpacked(ElectionPartialKeyPairBackupProto *message, ProtobufCAllocator *allocator):&#160;buff.pb-c.c']]],
  ['election_5fpartial_5fkey_5fpair_5fbackup_5fproto_5f_5fget_5fpacked_5fsize_11',['election_partial_key_pair_backup_proto__get_packed_size',['../buff_8pb-c_8c.html#af7d2fc795b4a4d3077886923bb42aea6',1,'election_partial_key_pair_backup_proto__get_packed_size(const ElectionPartialKeyPairBackupProto *message):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#af7d2fc795b4a4d3077886923bb42aea6',1,'election_partial_key_pair_backup_proto__get_packed_size(const ElectionPartialKeyPairBackupProto *message):&#160;buff.pb-c.c']]],
  ['election_5fpartial_5fkey_5fpair_5fbackup_5fproto_5f_5finit_12',['ELECTION_PARTIAL_KEY_PAIR_BACKUP_PROTO__INIT',['../buff_8pb-c_8h.html#acab6180eed04d9c3289657feb2fef4e5',1,'buff.pb-c.h']]],
  ['election_5fpartial_5fkey_5fpair_5fbackup_5fproto_5f_5finit_13',['election_partial_key_pair_backup_proto__init',['../buff_8pb-c_8c.html#af25aa737409f8d8dbcd772cc77fcb50b',1,'election_partial_key_pair_backup_proto__init(ElectionPartialKeyPairBackupProto *message):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#af25aa737409f8d8dbcd772cc77fcb50b',1,'election_partial_key_pair_backup_proto__init(ElectionPartialKeyPairBackupProto *message):&#160;buff.pb-c.c']]],
  ['election_5fpartial_5fkey_5fpair_5fbackup_5fproto_5f_5fpack_14',['election_partial_key_pair_backup_proto__pack',['../buff_8pb-c_8c.html#a9dfc49b39ae512d1d57f28ccd515d5d4',1,'election_partial_key_pair_backup_proto__pack(const ElectionPartialKeyPairBackupProto *message, uint8_t *out):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a9dfc49b39ae512d1d57f28ccd515d5d4',1,'election_partial_key_pair_backup_proto__pack(const ElectionPartialKeyPairBackupProto *message, uint8_t *out):&#160;buff.pb-c.c']]],
  ['election_5fpartial_5fkey_5fpair_5fbackup_5fproto_5f_5fpack_5fto_5fbuffer_15',['election_partial_key_pair_backup_proto__pack_to_buffer',['../buff_8pb-c_8c.html#ade2a35f5f7924db4482fcac00ea2ef15',1,'election_partial_key_pair_backup_proto__pack_to_buffer(const ElectionPartialKeyPairBackupProto *message, ProtobufCBuffer *buffer):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#ade2a35f5f7924db4482fcac00ea2ef15',1,'election_partial_key_pair_backup_proto__pack_to_buffer(const ElectionPartialKeyPairBackupProto *message, ProtobufCBuffer *buffer):&#160;buff.pb-c.c']]],
  ['election_5fpartial_5fkey_5fpair_5fbackup_5fproto_5f_5funpack_16',['election_partial_key_pair_backup_proto__unpack',['../buff_8pb-c_8c.html#ab764153f67f5779ecdd582f1da5da669',1,'election_partial_key_pair_backup_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#ab764153f67f5779ecdd582f1da5da669',1,'election_partial_key_pair_backup_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;buff.pb-c.c']]],
  ['election_5fpartial_5fkey_5fverification_5fproto_5f_5fdescriptor_17',['election_partial_key_verification_proto__descriptor',['../buff_8pb-c_8c.html#a09cc9509e6009aa2e5428bcfffa5c4f7',1,'election_partial_key_verification_proto__descriptor:&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a09cc9509e6009aa2e5428bcfffa5c4f7',1,'election_partial_key_verification_proto__descriptor:&#160;buff.pb-c.c']]],
  ['election_5fpartial_5fkey_5fverification_5fproto_5f_5ffree_5funpacked_18',['election_partial_key_verification_proto__free_unpacked',['../buff_8pb-c_8c.html#a47f6d5dda58fd34850e4b411e7c7198d',1,'election_partial_key_verification_proto__free_unpacked(ElectionPartialKeyVerificationProto *message, ProtobufCAllocator *allocator):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a47f6d5dda58fd34850e4b411e7c7198d',1,'election_partial_key_verification_proto__free_unpacked(ElectionPartialKeyVerificationProto *message, ProtobufCAllocator *allocator):&#160;buff.pb-c.c']]],
  ['election_5fpartial_5fkey_5fverification_5fproto_5f_5fget_5fpacked_5fsize_19',['election_partial_key_verification_proto__get_packed_size',['../buff_8pb-c_8c.html#a1faff5e415a84c67c82b3c9287b421f4',1,'election_partial_key_verification_proto__get_packed_size(const ElectionPartialKeyVerificationProto *message):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a1faff5e415a84c67c82b3c9287b421f4',1,'election_partial_key_verification_proto__get_packed_size(const ElectionPartialKeyVerificationProto *message):&#160;buff.pb-c.c']]],
  ['election_5fpartial_5fkey_5fverification_5fproto_5f_5finit_20',['election_partial_key_verification_proto__init',['../buff_8pb-c_8c.html#a11b780265588ea6a09adae01eed56968',1,'election_partial_key_verification_proto__init(ElectionPartialKeyVerificationProto *message):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a11b780265588ea6a09adae01eed56968',1,'election_partial_key_verification_proto__init(ElectionPartialKeyVerificationProto *message):&#160;buff.pb-c.c']]],
  ['election_5fpartial_5fkey_5fverification_5fproto_5f_5finit_21',['ELECTION_PARTIAL_KEY_VERIFICATION_PROTO__INIT',['../buff_8pb-c_8h.html#a6e1053295d0fd42f548215ccb90b0599',1,'buff.pb-c.h']]],
  ['election_5fpartial_5fkey_5fverification_5fproto_5f_5fpack_22',['election_partial_key_verification_proto__pack',['../buff_8pb-c_8c.html#ab800f109cf5d223c14e462b64b070dfc',1,'election_partial_key_verification_proto__pack(const ElectionPartialKeyVerificationProto *message, uint8_t *out):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#ab800f109cf5d223c14e462b64b070dfc',1,'election_partial_key_verification_proto__pack(const ElectionPartialKeyVerificationProto *message, uint8_t *out):&#160;buff.pb-c.c']]],
  ['election_5fpartial_5fkey_5fverification_5fproto_5f_5fpack_5fto_5fbuffer_23',['election_partial_key_verification_proto__pack_to_buffer',['../buff_8pb-c_8c.html#a76ddbdb929d3b09c663d8900ecc53777',1,'election_partial_key_verification_proto__pack_to_buffer(const ElectionPartialKeyVerificationProto *message, ProtobufCBuffer *buffer):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a76ddbdb929d3b09c663d8900ecc53777',1,'election_partial_key_verification_proto__pack_to_buffer(const ElectionPartialKeyVerificationProto *message, ProtobufCBuffer *buffer):&#160;buff.pb-c.c']]],
  ['election_5fpartial_5fkey_5fverification_5fproto_5f_5funpack_24',['election_partial_key_verification_proto__unpack',['../buff_8pb-c_8c.html#acc0bb5acf23ee881ae36e7e927a53c24',1,'election_partial_key_verification_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#acc0bb5acf23ee881ae36e7e927a53c24',1,'election_partial_key_verification_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;buff.pb-c.c']]],
  ['election_5fpolynomial_5fproto_5f_5fdescriptor_25',['election_polynomial_proto__descriptor',['../buff_8pb-c_8c.html#a0456650fe87e69e4b243d07e42695bc0',1,'election_polynomial_proto__descriptor:&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a0456650fe87e69e4b243d07e42695bc0',1,'election_polynomial_proto__descriptor:&#160;buff.pb-c.c']]],
  ['election_5fpolynomial_5fproto_5f_5ffree_5funpacked_26',['election_polynomial_proto__free_unpacked',['../buff_8pb-c_8c.html#a739d23bfb0370912de008221cc864356',1,'election_polynomial_proto__free_unpacked(ElectionPolynomialProto *message, ProtobufCAllocator *allocator):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a739d23bfb0370912de008221cc864356',1,'election_polynomial_proto__free_unpacked(ElectionPolynomialProto *message, ProtobufCAllocator *allocator):&#160;buff.pb-c.c']]],
  ['election_5fpolynomial_5fproto_5f_5fget_5fpacked_5fsize_27',['election_polynomial_proto__get_packed_size',['../buff_8pb-c_8c.html#a2021d073d926770ce972509f1a5960a3',1,'election_polynomial_proto__get_packed_size(const ElectionPolynomialProto *message):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a2021d073d926770ce972509f1a5960a3',1,'election_polynomial_proto__get_packed_size(const ElectionPolynomialProto *message):&#160;buff.pb-c.c']]],
  ['election_5fpolynomial_5fproto_5f_5finit_28',['election_polynomial_proto__init',['../buff_8pb-c_8c.html#a8150c188de9fe11b8d57f8ff6f008fb3',1,'election_polynomial_proto__init(ElectionPolynomialProto *message):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a8150c188de9fe11b8d57f8ff6f008fb3',1,'election_polynomial_proto__init(ElectionPolynomialProto *message):&#160;buff.pb-c.c']]],
  ['election_5fpolynomial_5fproto_5f_5finit_29',['ELECTION_POLYNOMIAL_PROTO__INIT',['../buff_8pb-c_8h.html#a9418715dcdbb186e23e38b123dfcdf29',1,'buff.pb-c.h']]],
  ['election_5fpolynomial_5fproto_5f_5fpack_30',['election_polynomial_proto__pack',['../buff_8pb-c_8c.html#ac7139f871f5ff18c69668ba4ba7eb4d3',1,'election_polynomial_proto__pack(const ElectionPolynomialProto *message, uint8_t *out):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#ac7139f871f5ff18c69668ba4ba7eb4d3',1,'election_polynomial_proto__pack(const ElectionPolynomialProto *message, uint8_t *out):&#160;buff.pb-c.c']]],
  ['election_5fpolynomial_5fproto_5f_5fpack_5fto_5fbuffer_31',['election_polynomial_proto__pack_to_buffer',['../buff_8pb-c_8c.html#a29a2bc0596a04f90f2280ff78ce3091a',1,'election_polynomial_proto__pack_to_buffer(const ElectionPolynomialProto *message, ProtobufCBuffer *buffer):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a29a2bc0596a04f90f2280ff78ce3091a',1,'election_polynomial_proto__pack_to_buffer(const ElectionPolynomialProto *message, ProtobufCBuffer *buffer):&#160;buff.pb-c.c']]],
  ['election_5fpolynomial_5fproto_5f_5funpack_32',['election_polynomial_proto__unpack',['../buff_8pb-c_8c.html#a81a85874513903b46b915327ac66ddf6',1,'election_polynomial_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a81a85874513903b46b915327ac66ddf6',1,'election_polynomial_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;buff.pb-c.c']]],
  ['electionjointkey_33',['ElectionJointKey',['../struct_election_joint_key.html',1,'']]],
  ['electionkeypair_34',['ElectionKeyPair',['../struct_election_key_pair.html',1,'']]],
  ['electionkeypairproto_35',['ElectionKeyPairProto',['../struct_election_key_pair_proto.html',1,'ElectionKeyPairProto'],['../buff_8pb-c_8h.html#aa10ffd4075cca579abe1536eef250868',1,'ElectionKeyPairProto:&#160;buff.pb-c.h']]],
  ['electionkeypairproto_5fclosure_36',['ElectionKeyPairProto_Closure',['../buff_8pb-c_8h.html#abfee9b02455ab9b5363add27a489a320',1,'buff.pb-c.h']]],
  ['electionpartialkeypairbackup_37',['ElectionPartialKeyPairBackup',['../struct_election_partial_key_pair_backup.html',1,'']]],
  ['electionpartialkeypairbackupproto_38',['ElectionPartialKeyPairBackupProto',['../struct_election_partial_key_pair_backup_proto.html',1,'ElectionPartialKeyPairBackupProto'],['../buff_8pb-c_8h.html#a7850043053cf486a202c498351357109',1,'ElectionPartialKeyPairBackupProto:&#160;buff.pb-c.h']]],
  ['electionpartialkeypairbackupproto_5fclosure_39',['ElectionPartialKeyPairBackupProto_Closure',['../buff_8pb-c_8h.html#ac5168646af088d5a666ef647de8d998b',1,'buff.pb-c.h']]],
  ['electionpartialkeyverification_40',['ElectionPartialKeyVerification',['../struct_election_partial_key_verification.html',1,'']]],
  ['electionpartialkeyverificationproto_41',['ElectionPartialKeyVerificationProto',['../struct_election_partial_key_verification_proto.html',1,'ElectionPartialKeyVerificationProto'],['../buff_8pb-c_8h.html#aa5f8e0a817c0008902caeb93d82816e2',1,'ElectionPartialKeyVerificationProto:&#160;buff.pb-c.h']]],
  ['electionpartialkeyverificationproto_5fclosure_42',['ElectionPartialKeyVerificationProto_Closure',['../buff_8pb-c_8h.html#a9dbe8ab592b19dd56252aff840c1ea96',1,'buff.pb-c.h']]],
  ['electionpolynomial_43',['ElectionPolynomial',['../struct_election_polynomial.html',1,'']]],
  ['electionpolynomialproto_44',['ElectionPolynomialProto',['../struct_election_polynomial_proto.html',1,'ElectionPolynomialProto'],['../buff_8pb-c_8h.html#a682b0a4432bc1b3f97779a555b08214b',1,'ElectionPolynomialProto:&#160;buff.pb-c.h']]],
  ['electionpolynomialproto_5fclosure_45',['ElectionPolynomialProto_Closure',['../buff_8pb-c_8h.html#a10d83da5158c0332cf46da69ecb0f801',1,'buff.pb-c.h']]],
  ['elgamal_5fcombine_5fpublic_5fkeys_46',['elgamal_combine_public_keys',['../crypto__utils_8c.html#aa09f7fb591e63268ec4987d2500cb561',1,'elgamal_combine_public_keys(ElectionKeyPair *pubkey_map, size_t count, ElectionJointKey *joint_key):&#160;crypto_utils.c'],['../crypto__utils_8h.html#aa09f7fb591e63268ec4987d2500cb561',1,'elgamal_combine_public_keys(ElectionKeyPair *pubkey_map, size_t count, ElectionJointKey *joint_key):&#160;crypto_utils.c']]],
  ['encrypted_5fcoordinate_47',['encrypted_coordinate',['../struct_election_partial_key_pair_backup_proto.html#a5025c16f8396c6a995c6740fc2e27c07',1,'ElectionPartialKeyPairBackupProto::encrypted_coordinate'],['../struct_election_partial_key_pair_backup.html#af76957df44f722a7074cc186cc427646',1,'ElectionPartialKeyPairBackup::encrypted_coordinate']]],
  ['esp_5frsa_5ftimeout_5fcnt_48',['ESP_RSA_TIMEOUT_CNT',['../user__settings_8h.html#a989728975dffafde34650b145a89e700',1,'user_settings.h']]]
];
