var searchData=
[
  ['election_5fkey_5fpair_5fproto_5f_5ffree_5funpacked_0',['election_key_pair_proto__free_unpacked',['../buff_8pb-c_8c.html#a94aacf4ede7e72c636d8caef080777e5',1,'election_key_pair_proto__free_unpacked(ElectionKeyPairProto *message, ProtobufCAllocator *allocator):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a94aacf4ede7e72c636d8caef080777e5',1,'election_key_pair_proto__free_unpacked(ElectionKeyPairProto *message, ProtobufCAllocator *allocator):&#160;buff.pb-c.c']]],
  ['election_5fkey_5fpair_5fproto_5f_5fget_5fpacked_5fsize_1',['election_key_pair_proto__get_packed_size',['../buff_8pb-c_8c.html#a3a83c69b34bc9ba8f6bb56f4af4f077f',1,'election_key_pair_proto__get_packed_size(const ElectionKeyPairProto *message):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a3a83c69b34bc9ba8f6bb56f4af4f077f',1,'election_key_pair_proto__get_packed_size(const ElectionKeyPairProto *message):&#160;buff.pb-c.c']]],
  ['election_5fkey_5fpair_5fproto_5f_5finit_2',['election_key_pair_proto__init',['../buff_8pb-c_8c.html#aa8242986e65a94460a790826d8ba4aec',1,'election_key_pair_proto__init(ElectionKeyPairProto *message):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#aa8242986e65a94460a790826d8ba4aec',1,'election_key_pair_proto__init(ElectionKeyPairProto *message):&#160;buff.pb-c.c']]],
  ['election_5fkey_5fpair_5fproto_5f_5fpack_3',['election_key_pair_proto__pack',['../buff_8pb-c_8c.html#ac69ed46c2e26ea62d7a8632652fd216c',1,'election_key_pair_proto__pack(const ElectionKeyPairProto *message, uint8_t *out):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#ac69ed46c2e26ea62d7a8632652fd216c',1,'election_key_pair_proto__pack(const ElectionKeyPairProto *message, uint8_t *out):&#160;buff.pb-c.c']]],
  ['election_5fkey_5fpair_5fproto_5f_5fpack_5fto_5fbuffer_4',['election_key_pair_proto__pack_to_buffer',['../buff_8pb-c_8c.html#a84fb8531693678c07ed8b960994b74b7',1,'election_key_pair_proto__pack_to_buffer(const ElectionKeyPairProto *message, ProtobufCBuffer *buffer):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a84fb8531693678c07ed8b960994b74b7',1,'election_key_pair_proto__pack_to_buffer(const ElectionKeyPairProto *message, ProtobufCBuffer *buffer):&#160;buff.pb-c.c']]],
  ['election_5fkey_5fpair_5fproto_5f_5funpack_5',['election_key_pair_proto__unpack',['../buff_8pb-c_8c.html#a70dd5a5f55a30514863cdbe879e80a79',1,'election_key_pair_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a70dd5a5f55a30514863cdbe879e80a79',1,'election_key_pair_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;buff.pb-c.c']]],
  ['election_5fpartial_5fkey_5fpair_5fbackup_5fproto_5f_5ffree_5funpacked_6',['election_partial_key_pair_backup_proto__free_unpacked',['../buff_8pb-c_8c.html#aff01ea2b4a4a1c148efef91e8b771dc6',1,'election_partial_key_pair_backup_proto__free_unpacked(ElectionPartialKeyPairBackupProto *message, ProtobufCAllocator *allocator):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#aff01ea2b4a4a1c148efef91e8b771dc6',1,'election_partial_key_pair_backup_proto__free_unpacked(ElectionPartialKeyPairBackupProto *message, ProtobufCAllocator *allocator):&#160;buff.pb-c.c']]],
  ['election_5fpartial_5fkey_5fpair_5fbackup_5fproto_5f_5fget_5fpacked_5fsize_7',['election_partial_key_pair_backup_proto__get_packed_size',['../buff_8pb-c_8c.html#af7d2fc795b4a4d3077886923bb42aea6',1,'election_partial_key_pair_backup_proto__get_packed_size(const ElectionPartialKeyPairBackupProto *message):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#af7d2fc795b4a4d3077886923bb42aea6',1,'election_partial_key_pair_backup_proto__get_packed_size(const ElectionPartialKeyPairBackupProto *message):&#160;buff.pb-c.c']]],
  ['election_5fpartial_5fkey_5fpair_5fbackup_5fproto_5f_5finit_8',['election_partial_key_pair_backup_proto__init',['../buff_8pb-c_8c.html#af25aa737409f8d8dbcd772cc77fcb50b',1,'election_partial_key_pair_backup_proto__init(ElectionPartialKeyPairBackupProto *message):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#af25aa737409f8d8dbcd772cc77fcb50b',1,'election_partial_key_pair_backup_proto__init(ElectionPartialKeyPairBackupProto *message):&#160;buff.pb-c.c']]],
  ['election_5fpartial_5fkey_5fpair_5fbackup_5fproto_5f_5fpack_9',['election_partial_key_pair_backup_proto__pack',['../buff_8pb-c_8c.html#a9dfc49b39ae512d1d57f28ccd515d5d4',1,'election_partial_key_pair_backup_proto__pack(const ElectionPartialKeyPairBackupProto *message, uint8_t *out):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a9dfc49b39ae512d1d57f28ccd515d5d4',1,'election_partial_key_pair_backup_proto__pack(const ElectionPartialKeyPairBackupProto *message, uint8_t *out):&#160;buff.pb-c.c']]],
  ['election_5fpartial_5fkey_5fpair_5fbackup_5fproto_5f_5fpack_5fto_5fbuffer_10',['election_partial_key_pair_backup_proto__pack_to_buffer',['../buff_8pb-c_8c.html#ade2a35f5f7924db4482fcac00ea2ef15',1,'election_partial_key_pair_backup_proto__pack_to_buffer(const ElectionPartialKeyPairBackupProto *message, ProtobufCBuffer *buffer):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#ade2a35f5f7924db4482fcac00ea2ef15',1,'election_partial_key_pair_backup_proto__pack_to_buffer(const ElectionPartialKeyPairBackupProto *message, ProtobufCBuffer *buffer):&#160;buff.pb-c.c']]],
  ['election_5fpartial_5fkey_5fpair_5fbackup_5fproto_5f_5funpack_11',['election_partial_key_pair_backup_proto__unpack',['../buff_8pb-c_8c.html#ab764153f67f5779ecdd582f1da5da669',1,'election_partial_key_pair_backup_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#ab764153f67f5779ecdd582f1da5da669',1,'election_partial_key_pair_backup_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;buff.pb-c.c']]],
  ['election_5fpartial_5fkey_5fverification_5fproto_5f_5ffree_5funpacked_12',['election_partial_key_verification_proto__free_unpacked',['../buff_8pb-c_8c.html#a47f6d5dda58fd34850e4b411e7c7198d',1,'election_partial_key_verification_proto__free_unpacked(ElectionPartialKeyVerificationProto *message, ProtobufCAllocator *allocator):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a47f6d5dda58fd34850e4b411e7c7198d',1,'election_partial_key_verification_proto__free_unpacked(ElectionPartialKeyVerificationProto *message, ProtobufCAllocator *allocator):&#160;buff.pb-c.c']]],
  ['election_5fpartial_5fkey_5fverification_5fproto_5f_5fget_5fpacked_5fsize_13',['election_partial_key_verification_proto__get_packed_size',['../buff_8pb-c_8c.html#a1faff5e415a84c67c82b3c9287b421f4',1,'election_partial_key_verification_proto__get_packed_size(const ElectionPartialKeyVerificationProto *message):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a1faff5e415a84c67c82b3c9287b421f4',1,'election_partial_key_verification_proto__get_packed_size(const ElectionPartialKeyVerificationProto *message):&#160;buff.pb-c.c']]],
  ['election_5fpartial_5fkey_5fverification_5fproto_5f_5finit_14',['election_partial_key_verification_proto__init',['../buff_8pb-c_8c.html#a11b780265588ea6a09adae01eed56968',1,'election_partial_key_verification_proto__init(ElectionPartialKeyVerificationProto *message):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a11b780265588ea6a09adae01eed56968',1,'election_partial_key_verification_proto__init(ElectionPartialKeyVerificationProto *message):&#160;buff.pb-c.c']]],
  ['election_5fpartial_5fkey_5fverification_5fproto_5f_5fpack_15',['election_partial_key_verification_proto__pack',['../buff_8pb-c_8c.html#ab800f109cf5d223c14e462b64b070dfc',1,'election_partial_key_verification_proto__pack(const ElectionPartialKeyVerificationProto *message, uint8_t *out):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#ab800f109cf5d223c14e462b64b070dfc',1,'election_partial_key_verification_proto__pack(const ElectionPartialKeyVerificationProto *message, uint8_t *out):&#160;buff.pb-c.c']]],
  ['election_5fpartial_5fkey_5fverification_5fproto_5f_5fpack_5fto_5fbuffer_16',['election_partial_key_verification_proto__pack_to_buffer',['../buff_8pb-c_8c.html#a76ddbdb929d3b09c663d8900ecc53777',1,'election_partial_key_verification_proto__pack_to_buffer(const ElectionPartialKeyVerificationProto *message, ProtobufCBuffer *buffer):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a76ddbdb929d3b09c663d8900ecc53777',1,'election_partial_key_verification_proto__pack_to_buffer(const ElectionPartialKeyVerificationProto *message, ProtobufCBuffer *buffer):&#160;buff.pb-c.c']]],
  ['election_5fpartial_5fkey_5fverification_5fproto_5f_5funpack_17',['election_partial_key_verification_proto__unpack',['../buff_8pb-c_8c.html#acc0bb5acf23ee881ae36e7e927a53c24',1,'election_partial_key_verification_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#acc0bb5acf23ee881ae36e7e927a53c24',1,'election_partial_key_verification_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;buff.pb-c.c']]],
  ['election_5fpolynomial_5fproto_5f_5ffree_5funpacked_18',['election_polynomial_proto__free_unpacked',['../buff_8pb-c_8c.html#a739d23bfb0370912de008221cc864356',1,'election_polynomial_proto__free_unpacked(ElectionPolynomialProto *message, ProtobufCAllocator *allocator):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a739d23bfb0370912de008221cc864356',1,'election_polynomial_proto__free_unpacked(ElectionPolynomialProto *message, ProtobufCAllocator *allocator):&#160;buff.pb-c.c']]],
  ['election_5fpolynomial_5fproto_5f_5fget_5fpacked_5fsize_19',['election_polynomial_proto__get_packed_size',['../buff_8pb-c_8c.html#a2021d073d926770ce972509f1a5960a3',1,'election_polynomial_proto__get_packed_size(const ElectionPolynomialProto *message):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a2021d073d926770ce972509f1a5960a3',1,'election_polynomial_proto__get_packed_size(const ElectionPolynomialProto *message):&#160;buff.pb-c.c']]],
  ['election_5fpolynomial_5fproto_5f_5finit_20',['election_polynomial_proto__init',['../buff_8pb-c_8c.html#a8150c188de9fe11b8d57f8ff6f008fb3',1,'election_polynomial_proto__init(ElectionPolynomialProto *message):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a8150c188de9fe11b8d57f8ff6f008fb3',1,'election_polynomial_proto__init(ElectionPolynomialProto *message):&#160;buff.pb-c.c']]],
  ['election_5fpolynomial_5fproto_5f_5fpack_21',['election_polynomial_proto__pack',['../buff_8pb-c_8c.html#ac7139f871f5ff18c69668ba4ba7eb4d3',1,'election_polynomial_proto__pack(const ElectionPolynomialProto *message, uint8_t *out):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#ac7139f871f5ff18c69668ba4ba7eb4d3',1,'election_polynomial_proto__pack(const ElectionPolynomialProto *message, uint8_t *out):&#160;buff.pb-c.c']]],
  ['election_5fpolynomial_5fproto_5f_5fpack_5fto_5fbuffer_22',['election_polynomial_proto__pack_to_buffer',['../buff_8pb-c_8c.html#a29a2bc0596a04f90f2280ff78ce3091a',1,'election_polynomial_proto__pack_to_buffer(const ElectionPolynomialProto *message, ProtobufCBuffer *buffer):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a29a2bc0596a04f90f2280ff78ce3091a',1,'election_polynomial_proto__pack_to_buffer(const ElectionPolynomialProto *message, ProtobufCBuffer *buffer):&#160;buff.pb-c.c']]],
  ['election_5fpolynomial_5fproto_5f_5funpack_23',['election_polynomial_proto__unpack',['../buff_8pb-c_8c.html#a81a85874513903b46b915327ac66ddf6',1,'election_polynomial_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a81a85874513903b46b915327ac66ddf6',1,'election_polynomial_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;buff.pb-c.c']]],
  ['elgamal_5fcombine_5fpublic_5fkeys_24',['elgamal_combine_public_keys',['../crypto__utils_8c.html#aa09f7fb591e63268ec4987d2500cb561',1,'elgamal_combine_public_keys(ElectionKeyPair *pubkey_map, size_t count, ElectionJointKey *joint_key):&#160;crypto_utils.c'],['../crypto__utils_8h.html#aa09f7fb591e63268ec4987d2500cb561',1,'elgamal_combine_public_keys(ElectionKeyPair *pubkey_map, size_t count, ElectionJointKey *joint_key):&#160;crypto_utils.c']]]
];
